fix link sigil spacing problem

--- a/src/css/typography.css
+++ b/src/css/typography.css
@@ -131,11 +131,16 @@ pre, code {
   font-family: 'Ubuntu Mono', 'Courier New', monospace;
 }
 
+pre {
+  overflow-x: auto;
+}
+
 a::after {
   display: inline-block;
-  margin-left: 0.25em;
   font-size: 70%;
   vertical-align: top;
+  text-indent: 0;
+  margin-left: 0.25em;
 }
 
 a {
@@ -179,9 +184,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h2 {
-  border-bottom: 1px;
-  padding-bottom: -0.1em;
-  margin-bottom: 0.9em;
+  border-bottom: 1px solid #333;
 }
 
 h4,
@@ -201,6 +204,7 @@ pre {
 article p,
 article li {
   text-align: justify;
+  hyphens: auto;
 }
 
 article p code {
